[gd_scene load_steps=5 format=3 uid="uid://ceqtr1voy0w0c"]

[ext_resource type="FontFile" uid="uid://bkmmwuoo8f2kx" path="res://fonts/PixelifySans-Bold.ttf" id="1_60k71"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_ik2nn"]
[ext_resource type="AudioStream" uid="uid://bqifchrk8scvm" path="res://audio/close.wav" id="3_asyuy"]
[ext_resource type="AudioStream" uid="uid://bc7e3un2qkilr" path="res://audio/button.wav" id="4_0s3pt"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_ik2nn")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
offset_left = 29.0
offset_top = 10.0
offset_right = 155.0
offset_bottom = 134.0
scale = Vector2(0.2, 0.2)

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Continue" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.607843, 0.780392, 0, 1)
theme_override_fonts/font = ExtResource("1_60k71")
theme_override_font_sizes/font_size = 16
text = "CONTINUE"

[node name="Restart" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.607843, 0.780392, 0, 1)
theme_override_fonts/font = ExtResource("1_60k71")
theme_override_font_sizes/font_size = 16
text = "RESTART LEVEL"

[node name="MainMenu" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.607843, 0.780392, 0, 1)
theme_override_fonts/font = ExtResource("1_60k71")
theme_override_font_sizes/font_size = 16
text = "MAIN MENU"

[node name="Exit" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.607843, 0.780392, 0, 1)
theme_override_fonts/font = ExtResource("1_60k71")
theme_override_font_sizes/font_size = 16
text = "EXIT"

[node name="CloseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_asyuy")
bus = &"SFX"

[node name="PressSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0s3pt")
bus = &"SFX"

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
